Add server stop injection
